widget: fixing the look of the comment (un)collapse icons in Firefox 3.5

--- a/coreapp/public/stylesheets/widget.css
+++ b/coreapp/public/stylesheets/widget.css
@@ -601,8 +601,7 @@ version: 3.0.0pr2
 }
 
 #outspokes #topbar select#comments_filter {
-  margin-left: 10px;
-  margin-right: -20px;
+  margin: 0 10px;
   font-size: .8em;
 }
 
@@ -622,26 +621,21 @@ version: 3.0.0pr2
   color: #C1272D;
 }
 
-#outspokes #topbar #outspokes_collapse_all, #outspokes #topbar #outspokes_uncollapse_all {
-  margin: 0px 0px 0px 10px;
+#outspokes #topbar #outspokes_collapse_all, 
+#outspokes #topbar #outspokes_uncollapse_all {
   outline: none;
+  padding: 0 3px;
+  margin: 0 2px;
+  position: relative;
+  top: 1px;
 }
 
 #outspokes #topbar #outspokes_collapse_all {
   background: url(/images/collapse.png) center center no-repeat;
-  height: 20px;
-  width: 10px;
-  float: right;
-  margin-top: -20px;
-  margin-right: 15px;
 }
 
 #outspokes #topbar #outspokes_uncollapse_all {
   background: url(/images/uncollapse.png) center center no-repeat;
-  height: 20px;
-  width: 10px;
-  float: right;
-  margin-top: -20px;
 }
 
 #outspokes #topbar #outspokes_collapse_all:hover {
